# mmdbridge

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_vs2022_64.bat  hook.sln  how_to_build.md
.github/workflows/: build_vs2022_64.yml
Release/Win32/: bone_test.py  mmdbridge_alembic_for_UE4.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_guerillarender.py  mmdbridge_alembic_for_preview.py  mmdbridge_alembic_for_renderman.py  mmdbridge_obj_general.py  mmdbridge_obj_metaseq.py  mmdbridge_octane.py  mmdbridge_octane_ocs.py  mmdbridge_tungsten.py  mmdbridge_vidro.py  mmdbridge_vmd.py  mmdbridge_vmd_mode1.py
Release/Win32/alembic_assign_scripts/: blender278.py  c4d.py  guerilla_render.lua  houidini.txt  ue4.py
Release/x64/: _light_test.py  bone_test.py  mmdbridge_alembic_for_3dsmax.py  mmdbridge_alembic_for_UE4.py  mmdbridge_alembic_for_blender.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_guerillarender.py  mmdbridge_alembic_for_houdini.py  mmdbridge_alembic_for_maya.py  mmdbridge_alembic_for_maya2014.py  mmdbridge_alembic_for_maya2015.py  mmdbridge_alembic_for_preview.py  mmdbridge_alembic_for_renderman.py  mmdbridge_avi.py  mmdbridge_obj_general.py  mmdbridge_obj_metaseq.py  mmdbridge_octane.py  mmdbridge_octane_ocs.py  mmdbridge_pmx.py  mmdbridge_rib.py  mmdbridge_tungsten.py  mmdbridge_vidro.py  pyqttest.py
Release/x64/alembic_assign_scripts/: 3dsmax2017.py  blender278.py  blender_mmdbridge_import_30_to_42.py  c4d.py  guerilla_render.lua  houidini.py  houidini.txt  maya2014.py  maya2015.py  ue4.py  ue5.py
Release/x64/mmdbridge_alembic_assign_scripts/: 3dsmax2017.py  blender278.py  blender_mmdbridge_import_30_to_42.py  blender_mmdbridge_import_30_to_45.py  c4d.py  houidini.py  maya2014.py  maya2015.py  ue4.py  ue5.py
Release/x64/mmdbridge_scripts/: mmdbridge_alembic_for_blender.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_guerillarender.py  mmdbridge_alembic_for_maya.py  mmdbridge_alembic_for_maya2014.py  mmdbridge_alembic_for_maya2015.py  mmdbridge_alembic_for_preview.py  mmdbridge_alembic_for_renderman.py  mmdbridge_obj_metaseq.py  mmdbridge_octane.py  mmdbridge_octane_ocs.py  mmdbridge_rib.py  mmdbridge_tungsten.py  mmdbridge_vidro.py  mmdbridge_vmd_mode1.py  mmdbridge_vmd_mode2.py  test_pyqt.py
Release/x64/mmdbridge_settings/: MikuMikuDance.exe.ini  MikuMikuDance_CHS.exe.ini
build_vs2022_64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mmdbridge.sln
build_vs2022_64/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  d3d9.vcxproj  d3d9.vcxproj.filters
build_vs2022_64/src/Debug/: d3d9.exp  d3d9.lib
build_vs2022_64/src/MikuMikuFormats/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MikuMikuFormats.vcxproj  MikuMikuFormats.vcxproj.filters  cmake_install.cmake
build_vs2022_64/src/MikuMikuFormats/Debug/: MikuMikuFormats.lib
build_vs2022_64/src/MikuMikuFormats/MikuMikuFormats.dir/Debug/: MikuMikuFormats.lib.recipe
build_vs2022_64/src/MikuMikuFormats/Release/: MikuMikuFormats.lib
build_vs2022_64/src/Release/: d3d9.exp  d3d9.lib
build_vs2022_64/src/d3d9.dir/Debug/: d3d9.dll.recipe  d3d9.res
build_vs2022_64/src/d3d9.dir/Debug/d3d9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  d3d9.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+2 more)
build_vs2022_64/src/d3d9.dir/Release/: RCa10080  RCa22804  d3d9.dll.recipe
build_vs2022_64/src/d3dx9_32/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  d3dx9_43.vcxproj  d3dx9_43.vcxproj.filters
build_vs2022_64/src/d3dx9_32/Debug/: d3dx9_43.exp  d3dx9_43.lib
build_vs2022_64/src/d3dx9_32/Release/: d3dx9_43.exp
build_vs2022_64/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_vs2022_64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_vs2022_64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
docs/: how_to_build.md  how_to_use.md
libs/MikuMikuFormats/include/: Vmd.h
package/MikuMikuDance_v932x64/: readme_mmdbridge.md
package/MikuMikuDance_v932x64/Data/: mmconfig.ini
package/MikuMikuDance_v932x64/mmdbridge_alembic_assign_scripts/: blender_mmdbridge_import_30_to_45.py  c4d.py  guerilla_render.lua
package/MikuMikuDance_v932x64/mmdbridge_scripts/: mmdbridge_vmd_mode1.py  mmdbridge_vmd_mode2.py
package/MikuMikuDance_v932x64/mmdbridge_scripts/other_scripts/: mmdbridge_alembic_for_3dsmax.py  mmdbridge_alembic_for_UE4.py  mmdbridge_alembic_for_c4d.py  mmdbridge_alembic_for_guerillarender.py  mmdbridge_alembic_for_houdini.py  mmdbridge_alembic_for_maya.py  mmdbridge_alembic_for_maya2014.py  mmdbridge_alembic_for_maya2015.py  mmdbridge_alembic_for_preview.py  mmdbridge_alembic_for_renderman.py  mmdbridge_avi.py  mmdbridge_obj_general.py  mmdbridge_obj_metaseq.py  mmdbridge_octane_ocs.py  mmdbridge_pmx.py  mmdbridge_rib.py  mmdbridge_tungsten.py  mmdbridge_vidro.py
package/MikuMikuDance_v932x64/mmdbridge_settings/: MikuMikuDance.exe.ini  MikuMikuDance_CHS.exe.ini  MikuMikuDance_CHT.exe.ini
project/d3d9/: d3d9.vcproj  d3d9.vcxproj  d3d9.vcxproj.filters
project/d3dx9/: d3dx9.vcproj  d3dx9.vcxproj  d3dx9.vcxproj.filters
project/umbase/: umbase.vcxproj  umbase.vcxproj.filters
src/: CMakeLists.txt
src/MikuMikuFormats/: CMakeLists.txt  EncodingHelper.h  Pmd.h  Pmx.cpp  Pmx.h  Vmd.h
src/d3d9/: RCa22420  alembic.cpp  alembic.h  bridge_parameter.cpp  bridge_parameter.h  d3d9.cpp  d3d9.def  d3d9.h  d3d9.rc  hook.def  pmx.cpp  pmx.h  resource.h  vmd.cpp  vmd.h
src/d3dx9_32/: CMakeLists.txt  d3dx9.cpp  d3dx9.h  hook.def
src/d3dx9_43/: CMakeLists.txt  d3dx9.cpp  d3dx9.h  hook.def
src/msimg32/: CMakeLists.txt  msimg32.cpp  msimg32.def
src/umbase/: UMAny.h  UMBox.cpp  UMBox.h  UMEvent.cpp  UMEvent.h  UMEventType.h  UMListener.h  UMListenerConnector.h  UMMacro.h  UMMath.h  UMMathTypes.h  UMMatrix.h  UMPath.cpp  UMPath.h  UMStringUtil.h  UMTime.cpp  UMTime.h  UMVector.h
vmd-debug/: !a.py  importer.py  raw_data.txt  raw_data3.txt  隨意測試用.ipynb
(+55 files in other folders)
